Sat Dec 27 15:07:26 2003  Dave Thomas  <dave@pragprog.com>

	* object.c: Add RDoc comments for Symbol class.

Sat Dec 27 14:39:53 2003  Dave Thomas  <dave@pragprog.com>

	* numeric.c (Init_Numeric): Add RDoc comments.

Sat Dec 27 00:44:00 2003  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (next_argv): warn always for stdin on inplace edit mode.

	* io.c (read_all): need to check string value.

	* io.c (argf_read): allow ARGF.read(nil).  [ruby-dev:22433]

Fri Dec 26 23:02:09 2003  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (rb_f_backquote): need not to check nil result.
	  [ruby-core:02078]

	* io.c (rb_io_getline): should return nil when read_all gives
	  empty string, even when nil rs is specified. [ruby-core:02077]

Fri Dec 26 18:33:54 2003  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: check if getcontext and setcontext are available.

	* eval.c: use presence of getcontext/setcontext.

Fri Dec 26 16:40:53 2003  Tanaka Akira  <akr@m17n.org>

	* lib/pathname.rb (PathnameTest#test_plus): add 2 assertions.

Fri Dec 26 14:05:13 2003  Minero Aoki  <aamine@loveruby.net>

	* test/ruby/test_pack.rb: new test test_pack_N.

Fri Dec 26 12:53:26 2003  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* pack.c (pack_pack): add sign check for 'i', and 'l'.
	  [ruby-dev:22427]

	* bignum.c (rb_quad_pack): add range check for 'quad int'.

Fri Dec 26 10:58:58 2003  NAKAMURA Usaku  <usa@ruby-lang.org>

	* MANIFEST: add vms/config.h and remove vms/config.h_in.

Thu Dec 26 10:42:00 2003  AKIYOSHI, Masamichi <masamichi.akiyoshi@hp.com>

	* io.c: [VMS] "rfm=stmlf" is specified for open() and fopen().

Thu Dec 25 22:29:53 2003  NAKAMURA Usaku  <usa@ruby-lang.org>

	* string.c (rb_str_update): don't return any value.

Thu Dec 25 15:30:17 2003  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (rb_str_update): call rb_str_modify().

Thu Dec 25 05:08:09 2003  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (search_required): search actual file name once when no