@@ -1,3 +1,7 @@
+Sat Dec 27 15:32:40 2003  Dave Thomas  <dave@wireless_3.local.thomases.com>
+
+	* time.c: Add RDoc comments for Time class.
+
 Sat Dec 27 15:07:26 2003  Dave Thomas  <dave@pragprog.com>
 
 	* object.c: Add RDoc comments for Symbol class.
